<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nocias"
            android:icon="@drawable/baseline_web_24"
            android:title="@string/menu_noticias"/>
        <item
            android:id="@+id/nav_curso"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/menu_cursos" />

        <item
            android:id="@+id/nav_profesor"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_profesores" />
        <item
            android:id="@+id/nav_estudiante"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_estudiante" />
        <item
            android:id="@+id/nav_notas"
            android:icon="@drawable/baseline_note_add_24"
            android:title="@string/menu_notas" />


    </group>
    <item
        android:title="Comunicaciones">
        <menu >
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contactos"
                    android:icon="@drawable/baseline_help_24"
                    android:title="@string/menu_contactos" />
                <item
                    android:id="@+id/nav_libro"
                    android:icon="@drawable/baseline_help_24"
                    android:title="@string/menu_libro" />
            </group>
        </menu>
    </item>



</menu>